# xa-autoortho

./: .gitignore  Cargo.toml  README.md  config  go.mod  go.sum  main.go  makefile  perm.sh  skunkcrafts_updater.cfg
.github/workflows/: release.yaml
autoortho/: autoortho.spec  autoortho_fuse.spec  requirements.txt
autoortho/autoortho/: __main__.py  aoconfig.py  aoseasons.py  aostats.py  autoortho.py  autoortho_fuse.py  config_ui.py  getortho.py  pydds.py
autoortho/autoortho/aoimage/: Makefile.osx  aoimage.go  go.mod  main
release/xa-autoortho/arm/: skunkcrafts_updater.cfg  skunkcrafts_updater_whitelist.txt
release/xa-autoortho/x86/: mac.xpl  skunkcrafts_updater.cfg  skunkcrafts_updater_whitelist.txt
services/: autoortho.go  autoortho_test.go  xplane.go
services/__mocks__/: xplane.go
src/: autoortho.rs  lib.rs  logger.rs  misc.rs
